<resources>
    <string name="app_name">Color Sensor</string>
    <string name="color_sensor">Color Sensor</string>
    <string name="meat_selection">Select a meat type:</string>
    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="mutton">Mutton</string>
    <string name="poultry">Poultry</string>
    <string name="meat_type">Meat Type:</string>
    <string name="hex_code">Hex Code:</string>
    <string name="rgb">RGB:</string>
    <string name="hsv">HSV:</string>
    <string name="xyz">XYZ:</string>
    <string name="cielab">LAB:</string>
    <string name="meat_status">Meat Status:</string>
    <string name="color">Color:</string>
    <string name="details">Details</string>
    <string name="process">Processing…</string>
    <string name="color_name">Color Name:</string>
    <string name="retrieve">Retrieving…</string>
    <string name="loading">Loading</string>
    <string name="under_development">Under Development</string>
    <string name="development_desc">The page you\'re looking for is currently under development and will be back soon.</string>
    <string name="unknown">Unknown - Invalid Meat Data</string>
    <string name="unknown_desc">Oops! It seems there was an issue with the captured image. The meat color either does not exist in our database or the color information is invalid. Please recapture again. If you believe this is an error, kindly contact our customer support team for assistance. We apologize for any inconvenience this may have caused. Thank you for your understanding.</string>
</resources>