<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeatDescriptionActivity"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/TopFunctionsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <!-- Camera ImageView at the left top corner -->
        <ImageView
            android:id="@+id/cameraImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:src="@drawable/camera" />

        <!-- Details TextView at the center top -->
        <TextView
            android:id="@+id/detailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/metrophobic_regular"
            android:text="Meat Description"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Home ImageView at the right top corner -->
        <ImageView
            android:id="@+id/homeImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:src="@drawable/home" />

        <RelativeLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/meatImageLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/meatImageView"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:scaleType="centerCrop"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/BottomFunctionsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/black"
                android:orientation="horizontal"
                android:layout_marginTop="410dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meatStatusTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="Meat Status:"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/statusTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/MeatTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="Meat Type:"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/MeatTypeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meatColorTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="@string/color_name"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ColorNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="@string/retrieve"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meatHexCodeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="@string/hex_code"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/HexCodeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/meatLabValuesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text="@string/cielab"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/LabValuesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/metrophobic_regular"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal">

                        <LinearLayout
                            android:id="@+id/capturedColumn"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/metrophobic_regular"
                                android:text="Captured"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/ShowColorImage"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:src="@drawable/color_custom_rectangle" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/referenceColumn"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/metrophobic_regular"
                                android:text="Reference"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:id="@+id/ShowReferenceColorImage"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:src="@drawable/meat_color_reference_rectangle" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
